--- a/frontend/computers/deployment.yml
+++ b/frontend/computers/deployment.yml
@@ -16,6 +16,7 @@ spec:
     spec:
       containers:
       - name: computers
-        image: 225962644762.dkr.ecr.us-west-2.amazonaws.com/shopping-site-computers:ff290f7406ca907ac93cc7150561f4570e3527e2
+        image: 600865094900.dkr.ecr.us-east-1.amazonaws.com/shopping-site-computers
         ports:
         - containerPort: 80
+
