Change image repository in deployment.yml
Updated the image repository for the electronics deployment.

--- a/frontend/electronics/deployment.yml
+++ b/frontend/electronics/deployment.yml
@@ -16,6 +16,7 @@ spec:
     spec:
       containers:
       - name: electronics
-        image: 225962644762.dkr.ecr.us-west-2.amazonaws.com/shopping-site-electronics:ff290f7406ca907ac93cc7150561f4570e3527e2
+        image: 600865094900.dkr.ecr.us-east-1.amazonaws.com/shopping-site-electronics
         ports:
         - containerPort: 80
+
