--- a/frontend/googlegrocery/deployment.yml
+++ b/frontend/googlegrocery/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: googlegrocery
-        image: 225962644762.dkr.ecr.us-west-2.amazonaws.com/shopping-site-googlegrocery:ff290f7406ca907ac93cc7150561f4570e3527e2
+        image: 600865094900.dkr.ecr.us-east-1.amazonaws.com/shopping-site-googlegrocery
         ports:
         - containerPort: 80
