--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,8 +7,6 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
-
   FRONTEND_SERVICES: "main electronics phones computers earphones googlemusic googlepay googleclothes googlegrocery"
   BACKEND_SERVICE: "backend"
 
@@ -18,6 +16,9 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    
+    # Skip if [skip ci] in commit message
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
 
     steps:
       # -------------------------
@@ -25,7 +26,6 @@ jobs:
       # -------------------------
       - name: 🧾 Checkout repository
         uses: actions/checkout@v4
-      
 
       # -------------------------
       # AWS Credentials
@@ -48,66 +48,117 @@ jobs:
       # -------------------------
       - name: 🛠 Build and Push Docker Images
         run: |
-          set -e
+          set -euo pipefail
+          
+          # Construct ECR registry URL
+          AWS_ACCOUNT_ID="${{ secrets.AWS_ACCOUNT_ID }}"
+          AWS_REGION="${{ env.AWS_REGION }}"
+          ECR_REGISTRY="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
           IMAGE_TAG="${GITHUB_SHA}"
+          
+          echo "════════════════════════════════════════"
+          echo "📋 Build Configuration:"
+          echo "   AWS Account: ${AWS_ACCOUNT_ID}"
+          echo "   Region: ${AWS_REGION}"
+          echo "   ECR Registry: ${ECR_REGISTRY}"
+          echo "   Image Tag: ${IMAGE_TAG}"
+          echo "════════════════════════════════════════"
+          echo ""
 
           # -------- Frontend --------
-          for service in $FRONTEND_SERVICES; do
-            FOLDER="frontend/$service"
-            REPO_NAME="shopping-site-$service"
-            IMAGE_URI="$ECR_REGISTRY/$REPO_NAME:$IMAGE_TAG"
+          echo "🌐 Building Frontend Services..."
+          for service in ${{ env.FRONTEND_SERVICES }}; do
+            FOLDER="frontend/${service}"
+            REPO_NAME="shopping-site-${service}"
+            IMAGE_URI="${ECR_REGISTRY}/${REPO_NAME}:${IMAGE_TAG}"
 
-            if [ ! -f "$FOLDER/Dockerfile" ]; then
-              echo "⚠️ No Dockerfile in $FOLDER, skipping..."
+            if [ ! -f "${FOLDER}/Dockerfile" ]; then
+              echo "⚠️  No Dockerfile in ${FOLDER}, skipping..."
               continue
             fi
 
-            echo "🚀 Building $service"
+            echo ""
+            echo "🚀 Building ${service}"
+            echo "   Repo: ${REPO_NAME}"
+            echo "   Image: ${IMAGE_URI}"
 
-            aws ecr describe-repositories --repository-names $REPO_NAME >/dev/null 2>&1 || \
+            # Create repo if doesn't exist
+            aws ecr describe-repositories \
+              --repository-names ${REPO_NAME} \
+              --region ${AWS_REGION} >/dev/null 2>&1 || \
               aws ecr create-repository \
-                --repository-name $REPO_NAME \
-                --image-scanning-configuration scanOnPush=true
+                --repository-name ${REPO_NAME} \
+                --region ${AWS_REGION} \
+                --image-scanning-configuration scanOnPush=false \
+                --encryption-configuration encryptionType=AES256
 
-            docker build -t $IMAGE_URI $FOLDER
-            docker push $IMAGE_URI
+            # Build
+            docker build -t "${IMAGE_URI}" "${FOLDER}"
+            
+            # Push with commit SHA
+            docker push "${IMAGE_URI}"
+            
+            # Tag and push as latest
+            docker tag "${IMAGE_URI}" "${ECR_REGISTRY}/${REPO_NAME}:latest"
+            docker push "${ECR_REGISTRY}/${REPO_NAME}:latest"
 
-            sed -i "s|image:.*|image: $IMAGE_URI|g" "$FOLDER/deployment.yml"
+            # Update deployment file
+            if [ -f "${FOLDER}/deployment.yml" ]; then
+              sed -i "s|image:.*${REPO_NAME}.*|image: ${IMAGE_URI}|g" "${FOLDER}/deployment.yml"
+            fi
+            
+            echo "✅ ${service} complete"
           done
 
           # -------- Backend --------
+          echo ""
+          echo "⚙️  Building Backend..."
           FOLDER="backend"
           REPO_NAME="shopping-site-backend"
-          IMAGE_URI="$ECR_REGISTRY/$REPO_NAME:$IMAGE_TAG"
+          IMAGE_URI="${ECR_REGISTRY}/${REPO_NAME}:${IMAGE_TAG}"
 
-          echo "🚀 Building backend"
+          echo "   Repo: ${REPO_NAME}"
+          echo "   Image: ${IMAGE_URI}"
 
-          aws ecr describe-repositories --repository-names $REPO_NAME >/dev/null 2>&1 || \
+          aws ecr describe-repositories \
+            --repository-names ${REPO_NAME} \
+            --region ${AWS_REGION} >/dev/null 2>&1 || \
             aws ecr create-repository \
-              --repository-name $REPO_NAME \
-              --image-scanning-configuration scanOnPush=true
+              --repository-name ${REPO_NAME} \
+              --region ${AWS_REGION} \
+              --image-scanning-configuration scanOnPush=false \
+              --encryption-configuration encryptionType=AES256
 
-          docker build -t $IMAGE_URI $FOLDER
-          docker push $IMAGE_URI
+          docker build -t "${IMAGE_URI}" "${FOLDER}"
+          docker push "${IMAGE_URI}"
+          
+          docker tag "${IMAGE_URI}" "${ECR_REGISTRY}/${REPO_NAME}:latest"
+          docker push "${ECR_REGISTRY}/${REPO_NAME}:latest"
 
-          sed -i "s|image:.*|image: $IMAGE_URI|g" "$FOLDER/backend-deployment.yml"
+          if [ -f "${FOLDER}/backend-deployment.yml" ]; then
+            sed -i "s|image:.*${REPO_NAME}.*|image: ${IMAGE_URI}|g" "${FOLDER}/backend-deployment.yml"
+          fi
+          
+          echo "✅ Backend complete"
+          echo ""
+          echo "════════════════════════════════════════"
+          echo "✅ All builds completed!"
+          echo "════════════════════════════════════════"
 
       # -------------------------
       # Commit YAML changes
       # -------------------------
       - name: 🔄 Commit updated YAML files
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
           git add frontend/**/deployment.yml backend/backend-deployment.yml
-          git commit -m "🔄 Update image tags after build [skip ci]" || echo "No changes"
-          git push origin main || echo "Nothing to push"
-
-    
-      # -------------------------
-      # Prevent CI loop
-      # -------------------------
-      - name: 🧠 Skip loop if commit was automated
-        if: contains(github.event.head_commit.message, '[skip ci]')
-        run: echo "Skipping re-triggered build"
+          
+          if git diff --staged --quiet; then
+            echo "ℹ️  No changes to commit"
+          else
+            git commit -m "🔄 Update image tags to ${GITHUB_SHA} [skip ci]"
+            git push origin main
+            echo "✅ Changes pushed"
+          fi
