--- a/frontend/main/service.yml
+++ b/frontend/main/service.yml
@@ -5,11 +5,12 @@ metadata:
   labels:
     app: main-frontend
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: main-frontend
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
+
 
