--- a/frontend/main/service.yml
+++ b/frontend/main/service.yml
@@ -5,12 +5,13 @@ metadata:
   labels:
     app: main-frontend
 spec:
-  type: LoadBalancer
+  type: ClusterIp
   selector:
     app: main-frontend
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
+
 
 
