Change service type from ClusterIP to LoadBalancer

--- a/frontend/main/service.yml
+++ b/frontend/main/service.yml
@@ -5,13 +5,14 @@ metadata:
   labels:
     app: main-frontend
 spec:
-  type: ClusterIp
+  type: LoadBalancer
   selector:
     app: main-frontend
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
+
 
 
 
